--- a/.github/workflows/openai-release.yml
+++ b/.github/workflows/openai-release.yml
@@ -11,7 +11,7 @@ jobs:
   dev:
     uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
     with:
-      configuration_path: ${{ github.workspace }}/tests/openai/openai.yml
+      configuration_path: configuration/openai.yml
       action: plan
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
