--- a/.github/workflows/openai-release.yml
+++ b/.github/workflows/openai-release.yml
@@ -7,11 +7,14 @@ permissions:
   contents: read
   id-token: write
 
+env:
+  CONFIGURATION_PATH: ${{ github.workspace }}/configuration/openai.yml
+
 jobs:
   dev:
     uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
     with:
-      configuration_path: configuration/openai.yml
+      configuration_path: ${{ github.env.CONFIGURATION_PATH }}
       action: plan
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
