--- a/.github/workflows/openai-ci.yml
+++ b/.github/workflows/openai-ci.yml
@@ -1,4 +1,4 @@
-name: Deploy - OpenAI resource
+name: CI - OpenAI resource
 
 on:
   workflow_dispatch:
@@ -12,7 +12,7 @@ jobs:
     uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
     with:
       configuration_path: configuration/openai.yml
-      action: apply
+      action: plan
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
       state_key: openai
