--- a/.github/workflows/openai-ci.yml
+++ b/.github/workflows/openai-ci.yml
@@ -11,7 +11,33 @@ jobs:
   dev:
     uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
     with:
-      configuration_path: configuration/openai.yml
+      configuration_path: configuration/dev.yml
+      action: plan
+      state_resource_group: rink72tf-rg
+      state_storage_account: rink72tfsa
+      state_key: openai
+    secrets:
+      client_id: ${{ secrets.AZURE_CLIENT_ID }}
+      tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+      subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+  test:
+    uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
+    with:
+      configuration_path: configuration/test.yml
+      action: plan
+      state_resource_group: rink72tf-rg
+      state_storage_account: rink72tfsa
+      state_key: openai
+    secrets:
+      client_id: ${{ secrets.AZURE_CLIENT_ID }}
+      tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+      subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+  prod:
+    uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
+    with:
+      configuration_path: configuration/prod.yml
       action: plan
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
