--- a/.github/workflows/openai-release.yml
+++ b/.github/workflows/openai-release.yml
@@ -20,3 +20,29 @@ jobs:
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
       subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+  test:
+    uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
+    with:
+      configuration_path: configuration/test.yml
+      action: apply
+      state_resource_group: rink72tf-rg
+      state_storage_account: rink72tfsa
+      state_key: openai
+    secrets:
+      client_id: ${{ secrets.AZURE_CLIENT_ID }}
+      tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+      subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+  prod:
+    uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
+    with:
+      configuration_path: configuration/prod.yml
+      action: apply
+      state_resource_group: rink72tf-rg
+      state_storage_account: rink72tfsa
+      state_key: openai
+    secrets:
+      client_id: ${{ secrets.AZURE_CLIENT_ID }}
+      tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+      subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
