--- a/.github/workflows/openai-release.yml
+++ b/.github/workflows/openai-release.yml
@@ -11,7 +11,7 @@ jobs:
   dev:
     uses: rink72/terraform-library/.github/workflows/deploy-openai-workflow.yml@main
     with:
-      configuration_path: configuration/openai.yml
+      configuration_path: configuration/dev.yml
       action: apply
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
