--- a/.github/workflows/openai-release.yml
+++ b/.github/workflows/openai-release.yml
@@ -15,7 +15,7 @@ jobs:
       action: apply
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
-      state_key: openai
+      state_key: dev
     secrets:
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
@@ -29,7 +29,7 @@ jobs:
       action: apply
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
-      state_key: openai
+      state_key: test
     secrets:
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
@@ -43,7 +43,7 @@ jobs:
       action: apply
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
-      state_key: openai
+      state_key: prod
     secrets:
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
