--- a/.github/workflows/openai-ci.yml
+++ b/.github/workflows/openai-ci.yml
@@ -13,6 +13,7 @@ jobs:
     with:
       configuration_path: configuration/dev.yml
       action: plan
+      github_environment: dev
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
       state_key: dev
@@ -27,6 +28,7 @@ jobs:
     with:
       configuration_path: configuration/test.yml
       action: plan
+      github_environment: test
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
       state_key: test
@@ -41,6 +43,7 @@ jobs:
     with:
       configuration_path: configuration/prod.yml
       action: plan
+      github_environment: prod
       state_resource_group: rink72tf-rg
       state_storage_account: rink72tfsa
       state_key: prod
